홈페이지 레포싯토리 수정
# Conflicts:
#	src/main/java/com/example/karina_project/repository/ArticleRepository.java
#	src/main/java/com/example/karina_project/sehyukPage/home_page/service/HomePageService.java