@@ -2,11 +2,11 @@ package com.example.karina_project.sehyukPage.home_page.service;
 
 import com.example.karina_project.repository.ArticleRepository;
 import com.example.karina_project.sehyukPage.home_page.dto.ArticleDto;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,6 +17,8 @@ public class HomePageService {
 
     private  final ArticleRepository articleRepository;
 
+
+    @Transactional
     public List<ArticleDto> getArticlesByTime() {
        Pageable pageable = PageRequest.of(0, 9);
        List<ArticleDto> articleDtos = articleRepository.findArticlesByStatusNotContainsKeywordWithPostTimeDesc("매칭 완료", pageable).stream().map(ArticleDto::from).collect(Collectors.toList());
@@ -24,12 +26,15 @@ public class HomePageService {
        return articleDtos;
     }
 
-    @Transactional
+    @Transactional(readOnly = true)
     public List<ArticleDto> getArticlesByFishSpecies(String fishSpecies) {
-        Pageable pageable = (Pageable) PageRequest.of(0, 9);
-        String searchSpecies = "$.\"" + fishSpecies + "\"";
-        List<ArticleDto> articleDtos = articleRepository.findArticlesByStatusNotContainsKeywordWithPostTimeDesc("매칭 완료", searchSpecies, pageable).stream().map(ArticleDto::from).collect(Collectors.toList());
-
+        Pageable pageable = PageRequest.of(0, 9); // (캐스팅 불필요)
+        List<ArticleDto> articleDtos =
+                articleRepository
+                        .findArticlesByStatusNotContainsKeywordAndContainFishSpeciesWithPostTimeDesc(
+                                "매칭 완료", fishSpecies, pageable
+                        )
+                        .stream().map(ArticleDto::from).toList();
         return articleDtos;
     }
 }
